fix: Fix the canvas height and width issue not covering the whole screen. Change the CSS of the canvas to use 100% of body instead of basing on viewport dimension. Also change the JS file for the animator to change the canvas size based on the current size of the body instead of window's inner dimensions

--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@ body {
 #leaf-falling-canvas {
   position:absolute;
   z-index: -2;
+  top: 0;
+  left: 0;
+  min-height: 100%;
+  min-width: 100%;
 }
 
 .dark-mode-bg {
